--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -12,9 +12,9 @@ body{
 }
 .allingText {
   
-  /* display: flex; */
-  /* align-items: center; */
-  /* justify-content: center; */
+  display: flex; 
+  align-items: center;
+  justify-content: center;
 
   text-align: center;
 
