--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -8,8 +8,11 @@
 } */
 body{
   background-color: #adadad;
-
 }
+/* #imgTest{
+  width: '100%';
+  height: 'auto'
+} */
 .allingText {
   
   display: flex; 
@@ -47,6 +50,11 @@ body{
       /* margin: 5px;  */
       padding: 0.3rem 0.2rem 0.3rem 0.2rem;
     }
+    img{
+      width: 100%;
+      height: auto;
+    }
+
     
    }
 
